@@ -1,5 +1,6 @@
 package co.hyperflex.services;
 
+import co.hyperflex.dtos.prechecks.GetBreakingChangeEntry;
 import co.hyperflex.dtos.prechecks.GetClusterPrecheckEntry;
 import co.hyperflex.dtos.prechecks.GetGroupedPrecheckResponse;
 import co.hyperflex.dtos.prechecks.GetIndexPrecheckGroup;
@@ -11,13 +12,17 @@ import co.hyperflex.entities.precheck.IndexPrecheckRun;
 import co.hyperflex.entities.precheck.NodePrecheckRun;
 import co.hyperflex.entities.precheck.PrecheckGroup;
 import co.hyperflex.entities.precheck.PrecheckRun;
+import co.hyperflex.entities.precheck.PrecheckSeverity;
 import co.hyperflex.entities.precheck.PrecheckStatus;
 import co.hyperflex.entities.precheck.PrecheckType;
+import co.hyperflex.entities.upgrade.ClusterUpgradeJob;
 import co.hyperflex.exceptions.NotFoundException;
 import co.hyperflex.mappers.PrecheckMapper;
+import co.hyperflex.repositories.BreakingChangeRepository;
 import co.hyperflex.repositories.PrecheckGroupRepository;
 import co.hyperflex.repositories.PrecheckRunRepository;
-import java.util.Collections;
+import co.hyperflex.repositories.projection.PrecheckStatusAndSeverityView;
+import jakarta.validation.constraints.NotNull;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -33,20 +38,25 @@ public class PrecheckRunService {
 
   private final PrecheckRunRepository precheckRunRepository;
   private final PrecheckGroupRepository precheckGroupRepository;
+  private final BreakingChangeRepository breakingChangeRepository;
+  private final ClusterUpgradeJobService clusterUpgradeJobService;
   private final MongoTemplate mongoTemplate;
   private final PrecheckMapper precheckMapper;
 
   public PrecheckRunService(PrecheckRunRepository precheckRunRepository,
-                            PrecheckGroupRepository precheckGroupRepository,
+                            PrecheckGroupRepository precheckGroupRepository, BreakingChangeRepository breakingChangeRepository,
+                            ClusterUpgradeJobService clusterUpgradeJobService,
                             MongoTemplate mongoTemplate, PrecheckMapper precheckMapper) {
     this.precheckRunRepository = precheckRunRepository;
     this.precheckGroupRepository = precheckGroupRepository;
+    this.breakingChangeRepository = breakingChangeRepository;
+    this.clusterUpgradeJobService = clusterUpgradeJobService;
     this.mongoTemplate = mongoTemplate;
     this.precheckMapper = precheckMapper;
   }
 
   public GetGroupedPrecheckResponse getGroupedPrecheckByClusterId(String clusterId) {
-
+    ClusterUpgradeJob clusterUpgradeJob = clusterUpgradeJobService.getActiveJobByClusterId(clusterId);
     return precheckGroupRepository.findFirstByClusterIdOrderByCreatedAtDesc(clusterId)
         .map(precheckGroup -> {
           List<PrecheckRun> precheckRuns =
@@ -74,23 +84,46 @@ public class PrecheckRunService {
                         && nodePrecheckRun.getNode().getId().equals(entry.getKey())).findFirst()
                 .orElseThrow()).getNode();
 
-            PrecheckStatus status = getMergedPrecheckStatus(entry.getValue());
-
+            List<PrecheckStatus> statuses = entry.getValue().stream().map(GetPrecheckEntry::status).toList();
+            PrecheckStatus status = getMergedPrecheckStatus(statuses);
             return new GetNodePrecheckGroup(nodeInfo.getId(), nodeInfo.getIp(), nodeInfo.getName(),
                 status, entry.getValue());
           }).toList();
 
           List<GetIndexPrecheckGroup> indexGroups =
               indexPrechecks.entrySet().stream().map(entry -> {
-                PrecheckStatus status = getMergedPrecheckStatus(entry.getValue());
+                List<PrecheckStatus> statuses = entry.getValue().stream().map(GetPrecheckEntry::status).toList();
+                PrecheckStatus status = getMergedPrecheckStatus(statuses);
                 return new GetIndexPrecheckGroup(entry.getKey(), entry.getKey(), status,
                     entry.getValue());
               }).toList();
 
-          return new GetGroupedPrecheckResponse(nodeGroups, clusterPrechecks, indexGroups,
-              Collections.emptyList());
+          List<GetBreakingChangeEntry> breakingChangeEntries =
+              breakingChangeRepository.getBreakingChanges(clusterUpgradeJob.getCurrentVersion(), clusterUpgradeJob.getTargetVersion())
+                  .stream()
+                  .map(breakingChange -> new GetBreakingChangeEntry(
+                      breakingChange.getId(),
+                      breakingChange.getTitle() + "(" + breakingChange.getVersion() + ")",
+                      List.of(
+                          "Category: " + breakingChange.getCategory(),
+                          breakingChange.getDescription(),
+                          breakingChange.getUrl()
+                      ),
+                      PrecheckStatus.FAILED
+                  ))
+                  .toList();
+          return new GetGroupedPrecheckResponse(nodeGroups, clusterPrechecks, indexGroups, breakingChangeEntries);
         })
         .orElseThrow(() -> new NotFoundException("No PrecheckRun found for cluster: " + clusterId));
+  }
+
+  public PrecheckStatus getGroupStatus(@NotNull String groupId) {
+    List<PrecheckStatus> statuses = precheckRunRepository.findStatusAndSeverityByPrecheckGroupId(groupId)
+        .stream()
+        .filter(status -> status.status() != PrecheckStatus.FAILED && status.severity() != PrecheckSeverity.ERROR)
+        .map(PrecheckStatusAndSeverityView::status)
+        .toList();
+    return getMergedPrecheckStatus(statuses);
   }
 
   public void rerunPrechecks(PrecheckGroup precheckGroup, PrecheckRerunRequest request) {
@@ -119,22 +152,22 @@ public class PrecheckRunService {
     mongoTemplate.updateMulti(query, update, PrecheckRun.class);
   }
 
-  private PrecheckStatus getMergedPrecheckStatus(List<GetPrecheckEntry> precheckRuns) {
+  private PrecheckStatus getMergedPrecheckStatus(List<PrecheckStatus> statuses) {
     boolean hasCompleted = false;
     boolean hasPending = false;
     boolean hasRunning = false;
 
-    for (var run : precheckRuns) {
-      if (run.status() == PrecheckStatus.FAILED) {
+    for (var status : statuses) {
+      if (status == PrecheckStatus.FAILED) {
         return PrecheckStatus.FAILED;
       }
-      if (run.status() == PrecheckStatus.RUNNING) {
+      if (status == PrecheckStatus.RUNNING) {
         hasRunning = true;
       }
-      if (run.status() == PrecheckStatus.PENDING) {
+      if (status == PrecheckStatus.PENDING) {
         hasPending = true;
       }
-      if (run.status() == PrecheckStatus.COMPLETED) {
+      if (status == PrecheckStatus.COMPLETED) {
         hasCompleted = true;
       }
     }
